# dashboard-dl

./: .gitignore  LICENSE  README.md  dashboard_data.json  pyproject.toml  response.json  soup.html
src/dashboard_dl/: __init__.py  downloader.py  main.py
