[project]
name = "dashboard-dl"
version = "0.2.0"
description = "Python tool to download and preserve Flipside Crypto Data Studio dashboards"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "click>=8.2.1",
    "requests>=2.32.4",
]

[project.scripts]
dashboard-dl = "dashboard_dl.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dashboard_dl"]

[dependency-groups]
dev = [
    "hatchling>=1.27.0",
]
